--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
+*{
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+}
+.body{
+  background-color: wheat;
+   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+
+}
+.input{
+  width: 100px;
+  height: 30px;
+  border-radius: 10px;
+
+
+}
+p{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.new{
+  background-color: wheat;
+  background-color: wheat;
+  width: 100%;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ height: 50vh;
+ flex-direction: column;
+ 
 }
